--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_menu">MenuActivity</string>
     <string name="hello_world">Hello world!</string>
+    <string name="action_add_event">+</string>
+    <string name="title_activity_add_event">AddEventActivity</string>
 </resources>
