--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,16 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_menu">MenuActivity</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_add_event">+</string>
+    <string name="action_add">+</string>
     <string name="title_activity_add_event">AddEventActivity</string>
+
+
+    <string name="event_add">Add Event</string>
+    <string name="event_name">Name</string>
+    <string name="event_location">Location</string>
+    <string name="event_start_date">Start Date</string>
+    <string name="event_end_date">End Date</string>
+    <string name="event_items">Items</string>
+    <string name="action_submit">Submit</string>
+    <string name="action_my_events">My Events</string>
 </resources>
