--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
 
-    <string name="event_add">Add Event</string>
-    <string name="event_name">Name</string>
+    <string name="event_add">New Event</string>
+    <string name="event_category">Category</string>
     <string name="event_location">Location</string>
     <string name="event_start_date">Start Date</string>
     <string name="event_end_date">End Date</string>
