--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="event_start_date">Start Date</string>
     <string name="event_end_date">End Date</string>
     <string name="event_items">Items</string>
+    <string name="recommended_items">Recommended Items</string>
     <string name="action_submit">Submit</string>
     <string name="action_my_events">My Events</string>
 </resources>
